Fixed spacing

--- a/P02 Style_Guide/css/main.css
+++ b/P02 Style_Guide/css/main.css
@@ -208,6 +208,8 @@ padding-top: 0rem;
   -webkit-transition: background-color 0.2s ease-out;
   transition: background-color 0.2s ease-out;
   font-family: "Hind-SemiBold", sans-serif;
+  margin-left: 3rem;
+  margin-top: 1rem;
   }
 
   .action-button-container:hover, .action-button-container:focus {
@@ -261,6 +263,7 @@ padding-top: 0rem;
 .first-element{
   padding-top: 0rem;
     margin-top: 4rem;
+    margin-left: 2rem;
 }
 .first-element1{
   padding-top: 0rem;
